--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -50,7 +50,7 @@
 <!-- Form -->
 <div id="contact" class="container">
     <div class="contact-block">
-        <h2>联系OpenLedger</h2>
+        <h2>联系我们</h2>
         <p>如果您对我们的区块链解决方案和服务有任何疑问，请联系我们。</p>
         <form id="about_form" action="/" method="post" enctype="application/x-www-form-urlencoded"
             class="needs-validation" novalidate>
@@ -90,17 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="custom-control custom-checkbox col-md-12">
-                    <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
-                    <label class="custom-control-label" for="customControlValidation1">I agree with OpenLedger
-                        Privacy Policy and give my permission to process my personal data for the purposes specified
-                        in it</label>
-                </div> -->
                 <div class="col-md-12">
-                    <!-- <div class="error-captcha"></div>
-                    <script src='https://www.google.com/recaptcha/api.js'></script>
-                    <div class="g-recaptcha" data-sitekey="6LeqgW4UAAAAAE4J3aI79inh76hoYTHYdQxuzC9w" data-size="100%">
-                    </div> -->
                     <button id="subm" type="submit">发送</button>
                 </div>
             </div>
@@ -114,30 +104,6 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <ul id="menu-footer" class="menu-footer row">
-                    <!-- <li id="menu-item-38"
-                        class="header-footer col-lg-6 col-md-6 col-sm-6 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-38">
-                        <a>认识OpenLedger</a>
-                        <ul class="sub-menu">
-                            <li id="menu-item-33"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a
-                                    title="About us" href="/about-us/">关于我们</a></li>
-                            <li id="menu-item-34"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a
-                                    title="What we do" href="/about-us/what-we-do/">我们所做的</a>
-                            </li>
-                            <li id="menu-item-35"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35"><a
-                                    title="Partnership" href="/about-us/partnership/">合伙</a>
-                            </li>
-                            <li id="menu-item-36"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36"><a
-                                    title="Private Policy" href="/privacy/">隐私政策</a></li>
-                            <li id="menu-item-37"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a
-                                    title="Terms and Conditions" href="/terms/">条款和条件</a>
-                            </li>
-                        </ul>
-                    </li> -->
                     <li id="menu-item-39"
                         class="header-footer col-lg-6 col-md-6 col-sm-6 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-39">
                         <a>我们提供什么</a>
@@ -170,34 +136,16 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="header">联系我们</div>
                 <div class="email subheader" itemscope>
-                    <a href="mailto:contact@openledger.info" itemprop="email">106316519@qq.com</a>
+                    <a href="mailto:contact@zhehan.tech" itemprop="email">contact@zhehan.tech</a>
                 </div>
-                <!-- <div class="subheader">Denmark</div>
-                <div class="footer-address">
-                    <div itemscope itemtype="http://schema.org/Organization">
-                        <span itemprop="name">OpenLedger ApS</span>,
-                        <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                            <span itemprop="streetAddress">Copenhagen Fintech Lab Applebys Plads 7</span>,
-                            <span itemprop="postalCode">1411</span>
-                            <div itemprop="addressLocality">Copenhagen, Denmark</div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <!-- <div class="header">Follow Us</div>
-                <div class="socials" itemscope itemtype="http://schema.org/Organization">
-                    <link itemprop="url" href="">
-                    <a itemprop="sameAs" href="https://www.facebook.com/OpenLedgerDC/" target="_blank"><i
+                <div class="socials">
+                    <a itemprop="sameAs" href="#" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a itemprop="sameAs" href="https://www.linkedin.com/company/openledger/" target="_blank"><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a itemprop="sameAs" href="https://twitter.com/openledgerdc" target="_blank"><i
-                            class="fab fa-twitter"></i></a>
-                    <a itemprop="sameAs" href="https://www.youtube.com/channel/UCZHkjzM5Vp5RH0H_XGBtS0g"
-                        target="_blank"><i class="fab fa-youtube"></i></a>
                 </div> -->
-                <div class="copyright">© 2014—2019 OpenLedger. 版权所有.</div>
+                <div class="copyright">©2019 哲涵区块链科技工作室. 版权所有.</div>
             </div>
         </div>
     </div>
