--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-sm-12" itemscope itemtype="http://schema.org/Organization">
-                <meta itemprop="name" content="OpenLedger Aps">
+                <meta itemprop="name" content="Aps">
                 <a class="logo" itemprop="url" href="/" rel="home">
-                    <img class="img-fluid" src="/images/logo.svg" itemprop="logo" alt="OpenLedger logo">
+                    <img class="img-fluid" src="/images/logo.svg" itemprop="logo" alt="logo">
                 </a>
             </div>
             <div class="col-lg-6 col-sm-12 col-12 wrap-nav">
@@ -18,7 +18,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <a href="/" rel="home" itemprop="url" class="logo_adaptive">
-                            <img src="/images/logo-white.svg" alt="OpenLedger logo">
+                            <img src="/images/logo-white.svg" alt="logo">
                         </a>
                         <ul id="menu-header" class="navbar-nav">
                             <!-- <li id="menu-item-287" itemprop="url"
