--- a/views/common/solutions.ejs
+++ b/views/common/solutions.ejs
@@ -10,7 +10,7 @@
                     </div>
                     <h3 class="explore-slide-title">物联网</h3>
                     <p class="explore-slide-desc">
-                        OpenLedger提供了创新的解决方案，将物联网与加密的，不变的，可审核的区块链相结合。
+                        我们提供了创新的解决方案，将物联网与加密的，不变的，可审核的区块链相结合。
                     </p>
                     <a href="/solutions/ito" class="explore-slide-link link">了解更多</a>
                 </div>
@@ -76,7 +76,7 @@
                         <img src="/images/Uploads/education.svg" alt="Education">
                     </div>
                     <h3 class="explore-slide-title">教育</h3>
-                    <p class="explore-slide-desc">OpenLedger带来了一支经验丰富的区块链开发人员团队，并为教育项目创建了自定义解决方案。</p>
+                    <p class="explore-slide-desc">我们拥有一支经验丰富的区块链开发人员团队，并为教育项目设计了自定义的解决方案。</p>
                     <!-- <a href="/solutions/blockchain-education/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
