--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -232,7 +232,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <p>要想成功的定制区块链项目并不是一件简单的事情，它需要专业的技能和严格的项目管理。我们使用了精心设计的区块链开发流程结合敏捷开发，让您的项目完全地按照您的需求去实现。</p>
-                                    <p>OpenLedger内部的团队包括区块链产品经理、区块链需求分析人员、区块架构师、区块链开发人员、质量保证专家和其它各行业专家，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
+                                    <p>我们的团队内部包括区块链产品经理、区块链需求分析人员、区块架构师、区块链开发人员、质量保证专家和其它各行业专家，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
                                     </p>
                                 </div>
                             </div>
