--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>区块链技术服务<br>的业务需求量与日俱增</h1>
-                    <div class="h2-banner">OpenLedger为处于不同行业的公司提供区块链技术服务</div>
+                    <div class="h2-banner">我们为处于不同行业的公司提供区块链技术服务</div>
                     <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
@@ -116,7 +116,7 @@
                     <div class="col-md-6">
                         <div class="tile">
                             <h3>Smart Contract(智能合约)</h3>
-                            <div class="text">OpenLedger的技术团队对Hyperledger(超级账本)，EOS和Ethereum(以太坊)智能合约的开发也拥有很丰富的经验。
+                            <div class="text">我们的技术团队对Hyperledger(超级账本)，EOS和Ethereum(以太坊)智能合约的开发也拥有很丰富的经验。
                                 <a class="teal-link" href="/services/smart-contract">了解更多</a>
                             </div>
                         </div>
