--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,35 +8,13 @@
     <link rel="icon" href="/ico/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#ffffff">
     <title><%= title %></title>
-    <!-- All in One SEO Pack 3.2.9 by Michael Torbert of Semper Fi Web Designob_start_detected [-1,-1] -->
-    <meta name="description"
-        content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-
-    <link rel="canonical" href="#" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="企业区块链解决方案，服务和产品-OpenLedger" />
-    <meta property="og:description"
-        content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-    <meta property="og:url" content="#" />
-    <meta property="og:site_name" content="openledger.info" />
-    <meta property="og:image" content="/images/open-grap-openledger-1200-630.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:secure_url" content="/images/open-grap-openledger-1200-630.jpg" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="企业区块链解决方案，服务和产品-OpenLedger" />
-    <meta name="twitter:description"
-        content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-    <meta name="twitter:image" content="/images/open-grap-openledger-1200-630.jpg" />
-    <!-- All in One SEO Pack -->
-    <link rel='dns-prefetch' href='//s.w.org' />
-    <link rel='stylesheet' id='openledger-bootstrap-css-css' href='/packages/bootstrap/css/bootstrap.css' media='all' />
-    <link rel='stylesheet' id='openledger-slick-css-css' href='/packages/slick/slick.css' media='all' />
-    <link rel='stylesheet' id='openledger-slick-theme-css-css' href='/packages/slick/slick-theme.css' media='all' />
-    <link rel='stylesheet' id='openledger-lightbox-css-css' href='/packages/light-box/css/lightbox.min.js'
+    <link rel='stylesheet' href='/packages/bootstrap/css/bootstrap.css' media='all' />
+    <link rel='stylesheet' href='/packages/slick/slick.css' media='all' />
+    <link rel='stylesheet' href='/packages/slick/slick-theme.css' media='all' />
+    <link rel='stylesheet' href='/packages/light-box/css/lightbox.min.js'
         media='all' />
-    <link rel='stylesheet' id='openledger-style-css' href='/css/style.css' media='all' />
-    <link rel='stylesheet' id='openledger-screen-css-css' href='/css/screen.css' media='all' />
+    <link rel='stylesheet' href='/css/style.css' media='all' />
+    <link rel='stylesheet' href='/css/screen.css' media='all' />
     <link href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.css" rel="stylesheet">
     <script type="text/javascript" src="/packages/jquery/jquery.js"></script>
     <script type="text/javascript" src="/packages/jquery/jquery-migrate.min.js"></script>
@@ -49,20 +27,12 @@
     <script type="text/javascript" src="/js/scripts.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
     <!--[if lt IE 9]><script src="/packages/tools/html5shiv.min.js"></script><![endif]-->
-    <style>
-        .recentcomments a {
-            display: inline !important;
-            padding: 0 !important;
-            margin: 0 !important;
-        }
-    </style>
 </head>
 
 <body class="index-page">
     <!-- Common Header -->
     <% include ./common/header.ejs %>
     <!--Common Header End-->
-
     <!-- Content -->
     <div class="banner">
         <div class="container">
@@ -72,7 +42,7 @@
                     <div class="h2-banner h2-border color-white">
                         提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助企业简化流程、提高效率，确保制度的公平和公正。</div>
                     <div class="banner-text">
-                        OpenLedger提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
+                        提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
                     </div>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -90,7 +60,7 @@
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链开发</h2>
                 <div class="text">
-                    OpenLedger拥有专业区块链技术团队来提供技术服务。
+                    我们拥有专业的区块链技术团队来提供技术服务。
                     <br><br>
                     基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发。
                 </div>
@@ -101,7 +71,7 @@
             <div class="col-md-6 image-block-right text-right">
                 <h2>基于区块链的行业解决方案</h2>
                 <div class="text" style="text-align: left;">
-                    <br>OpenLedger为金融、科技、娱乐等其它行业提供定制化的基于区块链的解决方案。
+                    <br>为金融、科技、娱乐等其它行业提供定制化的基于区块链的解决方案。
                     <br><br>以专业的知识和技能以及在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
@@ -118,16 +88,16 @@
             </div>
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链周边产品研发</h2>
-                <div class="text">openLedger不仅提供区块链系统的定制开发，还提供包括Dapp(去中心化应用程序)、智能合约、区块浏览器、交易所通证对接、钱包等区块链周边产品的研发服务。
+                <div class="text">我们不仅提供区块链系统的定制开发，还提供包括Dapp(去中心化应用程序)、智能合约、区块浏览器、交易所通证对接、钱包等区块链周边产品的研发服务。
                 </div>
                 <a href="#contact" class="link">更多</a>
             </div>
         </div>
         <div class="row block">
-            <div class="openLedger-research-and-department">
+            <div>
                 <div class="container">
-                    <h2>OpenLedger的研发部门</h2>
-                    <div class="">
+                    <h2>我们的研发部门</h2>
+                    <div>
                         <div class="h4">
                             团队内拥有多名区块链技术的专家，他们负责分析项目实施所面临的各种挑战和业务方面等问题，并提供最有效的解决方案。
                         </div>
@@ -140,10 +110,10 @@
                         <img class="manufacturer-dots" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
                         <img class="manufacturer-image manufacturer-image-1170"
                             src="/images/Services/Research/scheme1170.svg"
-                            alt="OpenLedger research and development department">
+                            alt="research and development department">
                         <img class="manufacturer-image manufacturer-image-1024"
                             src="/images/Services/Research/scheme1024.svg"
-                            alt="OpenLedger research and development department">
+                            alt="research and development department">
                         <div class="manufacturer-points research-manufacturer-points">
                             <div class="manufacturer-point">
                                 <div class="manufacturer-point-toggle manufacturer-point-toggle01">
@@ -290,7 +260,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-6 sphere">
-                    <h2>关于 OpenLedger</h2>
+                    <h2>关于我们</h2>
                     <img class="img-fluid" src="/images/Uploads/about-home-icon1.svg" alt="" />
                     <img class="img-fluid" src="/images/Uploads/about-home-icon2.svg" alt="" />
                     <img class="img-fluid" src="/images/Uploads/about-home-icon3.svg" alt="" />
@@ -298,16 +268,16 @@
                 </div>
                 <div class="col-md-12 col-lg-6" style="margin-top: 10px;">
                     <p>我们是一家致力于将区块链技术的力量带到更广阔的商业领域中的公司，公司CEO拥有多年的区块链产品研发和市场开拓经验。公司总部位于深圳。</p>
-                    <p>OpenLedger拥有专业的软件开发和架构专家，为市场营销人员、业务分析师和技术支持人员提供强大的后盾。</p>
+                    <p>我们拥有专业的软件开发和架构专家，为市场营销人员、业务分析师和技术支持人员提供强大的后盾。</p>
                     <p>多年以来，我们一直与全国各地的客户合作，利用现有的区块链解决方案，来构建新的去中心化应用程序，为合作伙伴的业务转型助力。</p>
                 </div>
             </div>
         </div>
     </div>
-    <div style="background-color: #fff;">
+    <div style="background-color: #fff; padding-top: 30px;">
         <% include ./common/solutions.ejs %>
     </div>
-    
+
     <!-- Content End -->
 
     <!-- Common Footer -->
