--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -41,7 +41,7 @@
                 <div class="col-lg-8 col-sm-12">
                     <h1>区块链研发服务</h1>
                     <div class="h2-banner">使用区块链改变您的业务</div>
-                    <div class="text">OpenLedger确保将区块链技术完美地整合到您的运营和当前平台中。</div>
+                    <div class="text">确保将区块链技术完美地整合到您的运营和当前平台中。</div>
                     <a href="#contact" class="link">获取免费报价</a>
                     <div class="bg"></div>
                 </div>
@@ -85,9 +85,9 @@
             </div>
         </div>
 
-        <div class="openLedger-research-and-department">
+        <div>
             <div class="container">
-                <h2>OpenLedger研发部门</h2>
+                <h2>我们的研发部门</h2>
                 <div class="gor-100">
                     <div class="h4">
                         团队内拥有多名区块链技术的专家，他们负责分析项目实施所面临的各种挑战和业务方面等问题，并提供最有效的解决方案。
@@ -101,10 +101,10 @@
                     <img class="manufacturer-dots" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
                     <img class="manufacturer-image manufacturer-image-1170"
                         src="/images/Services/Research/scheme1170.svg"
-                        alt="OpenLedger research and development department">
+                        alt="research and development department">
                     <img class="manufacturer-image manufacturer-image-1024"
                         src="/images/Services/Research/scheme1024.svg"
-                        alt="OpenLedger research and development department">
+                        alt="research and development department">
                     <div class="manufacturer-points research-manufacturer-points">
                         <div class="manufacturer-point">
                             <div class="manufacturer-point-toggle manufacturer-point-toggle01">
@@ -113,7 +113,7 @@
                             <div class="manufacturer-point-content">
                                 <div class="solid-arrow"></div>
                                 <ul class="manufacturer-point-list manufacturer-list">
-                                    <li>OpenLedger专家可以发现，分析，定义和记录项目需求。</li>
+                                    <li>我们的专家可以发现，分析，定义和记录项目需求。</li>
                                 </ul>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
             <div class="container">
                 <div>
                     <h2>区块链咨询</h2>
-                    <div class="h4 gor-100">在OpenLedger，我们为区块链的实施提供技术和业务方面的帮助。</div>
+                    <div class="h4 gor-100">我们为区块链的实施提供技术和业务方面的帮助。</div>
                 </div>
                 <div class="become-expert-content">
                     <div class="row">
