--- a/views/solutions/index.ejs
+++ b/views/solutions/index.ejs
@@ -8,35 +8,13 @@
     <link rel="icon" href="/ico/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#ffffff">
     <title><%= title %></title>
-    <!-- All in One SEO Pack 3.2.9 by Michael Torbert of Semper Fi Web Designob_start_detected [-1,-1] -->
-    <meta name="description"
-        content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-
-    <link rel="canonical" href="#" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="企业区块链解决方案，服务和产品-OpenLedger" />
-    <meta property="og:description"
-        content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-    <meta property="og:url" content="#" />
-    <meta property="og:site_name" content="openledger.info" />
-    <meta property="og:image" content="/images/open-grap-openledger-1200-630.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:secure_url" content="/images/open-grap-openledger-1200-630.jpg" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="企业区块链解决方案，服务和产品-OpenLedger" />
-    <meta name="twitter:description"
-        content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-    <meta name="twitter:image" content="/images/open-grap-openledger-1200-630.jpg" />
-    <!-- All in One SEO Pack -->
-    <link rel='dns-prefetch' href='//s.w.org' />
-    <link rel='stylesheet' id='openledger-bootstrap-css-css' href='/packages/bootstrap/css/bootstrap.css' media='all' />
-    <link rel='stylesheet' id='openledger-slick-css-css' href='/packages/slick/slick.css' media='all' />
-    <link rel='stylesheet' id='openledger-slick-theme-css-css' href='/packages/slick/slick-theme.css' media='all' />
-    <link rel='stylesheet' id='openledger-lightbox-css-css' href='/packages/light-box/css/lightbox.min.js'
+    <link rel='stylesheet' href='/packages/bootstrap/css/bootstrap.css' media='all' />
+    <link rel='stylesheet' href='/packages/slick/slick.css' media='all' />
+    <link rel='stylesheet' href='/packages/slick/slick-theme.css' media='all' />
+    <link rel='stylesheet' href='/packages/light-box/css/lightbox.min.js'
         media='all' />
-    <link rel='stylesheet' id='openledger-style-css' href='/css/style.css' media='all' />
-    <link rel='stylesheet' id='openledger-screen-css-css' href='/css/screen.css' media='all' />
+    <link rel='stylesheet' href='/css/style.css' media='all' />
+    <link rel='stylesheet' href='/css/screen.css' media='all' />
     <link href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.css" rel="stylesheet">
     <script type="text/javascript" src="/packages/jquery/jquery.js"></script>
     <script type="text/javascript" src="/packages/jquery/jquery-migrate.min.js"></script>
@@ -83,7 +61,7 @@
                     <h2 class="h1 color-h2 m-0 p-0">我们的解决方案</h2>
                 </div>
                 <div class="col-md-6">
-                    OpenLedger为企业一对一定制设计开发区块链解决方案。我们运用丰富的经验和知识能够设计开发复杂、大规模、且有效的解决方案来满足您的行业和业务的需求。</div>
+                    为企业一对一定制设计开发区块链解决方案。我们运用丰富的经验和知识能够设计开发复杂、大规模、且有效的解决方案来满足您的行业和业务的需求。</div>
             </div>
         </div>
         <div class="container">
