--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -95,7 +95,7 @@
                 <h2>如何将区块链技术和物联网结合</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        由于数据流的安全性和完整性方面存在的各种问题，物联网企业在应用方面面临各种问题。通过区块链物联网解决方案，OpenLedger可以解决这些问题，推动物联网设备无缝集成到你的业务当中。
+                        由于数据流的安全性和完整性方面存在的各种问题，物联网企业在应用方面面临各种问题。通过我们提供的基于区块链的物联网解决方案可以解决这些问题。
                     </div>
                 </div>
                 <ul class="black-point-list">
@@ -206,7 +206,7 @@
                     </div>
                     <div class="col-md-5">
                         <p>
-                            OpenLedger的内部团队由架构师、开发人员和QA专家组成，他们将帮助您的企业克服瓶颈和障碍，实现区块链物联网。
+                            我们的团队内部由架构师、开发人员和QA专家组成，他们将帮助您的企业克服瓶颈和障碍，实现区块链物联网。
                         </p>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
             <div class="container">
                 <h2>区块链和物联网跨行业的结合</h2>
                 <div class="h4 gor-100">
-                    OpenLedger提供创新的解决方案，将物联网与加密的、不可篡改的、可审计的区块链相结合。这种结合带来了诸多好处:
+                    提供创新的解决方案，将物联网与加密的、不可篡改的、可审计的区块链相结合。这种结合带来了诸多好处:
                 </div>
             </div>
         </div>
