--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -76,7 +76,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col-sm-12">
-                            <input type="text" class="form-control required" name="phone" placeholder="电话号码" required>
+                            <input type="text" class="form-control required" name="tel" placeholder="电话号码" required>
                             <span class="error invalid-feedback">请输入您的电话号码</span>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <div class="form-row">
                         <div class="col-sm-12">
-                            <textarea class="form-control required" name="message" placeholder="您的问题"
+                            <textarea class="form-control required" name="question" placeholder="您的问题"
                                 required></textarea>
                             <span class="error invalid-feedback">请输入您的问题</span>
                         </div>
