--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -110,8 +110,7 @@
                         <ul class="sub-menu">
                             <li id="menu-item-71"
                                 class="arrow menu-item menu-item-type-post_type menu-item-object-services menu-item-71">
-                                <a title="Blockchain development"
-                                    href="/services/blockchain-development">区块链开发</a>
+                                <a title="Blockchain development" href="/services/blockchain-development">区块链开发</a>
                             </li>
                             <!-- <li id="menu-item-1818"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1818"><a
