--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,288 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>我的技术梦</title>
+    <link rel="icon" href="/ico/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#ffffff">
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/packages/bootstrap/css/bootstrap.css' media='all' />
+    <link rel='stylesheet' href='/packages/slick/slick.css' media='all' />
+    <link rel='stylesheet' href='/packages/slick/slick-theme.css' media='all' />
+    <link rel='stylesheet' href='/packages/light-box/css/lightbox.min.js'
+        media='all' />
+    <link rel='stylesheet' href='/css/style.css' media='all' />
+    <link rel='stylesheet' href='/css/screen.css' media='all' />
+    <link href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.css" rel="stylesheet">
+    <script type="text/javascript" src="/packages/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/packages/jquery/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="/packages/tools/popper.min.js"></script>
+    <script type="text/javascript" src="/packages/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/packages/slick/slick.min.js"></script>
+    <script type="text/javascript" src="/packages/tools/js.cookie.js"></script>
+    <script type="text/javascript" src="/packages/jquery/jquery.session.js"></script>
+    <script type="text/javascript" src="/packages/light-box/js/lightbox.js"></script>
+    <script type="text/javascript" src="/js/scripts.js"></script>
+    <script type="text/javascript" src="/js/common.js"></script>
+    <!--[if lt IE 9]><script src="/packages/tools/html5shiv.min.js"></script><![endif]-->
 </head>
-<body>
-    <h1>我的技术梦</h1>
+
+<body class="index-page">
+    <!-- Common Header -->
+    <% include ./common/header.ejs %>
+    <!--Common Header End-->
+    <!-- Content -->
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <h1>用区块链技术改进<br>各行业现有的业务</h1>
+                    <div class="h2-banner h2-border color-white">
+                        提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助企业简化流程、提高效率，确保制度的公平和公正。</div>
+                    <div class="banner-text">
+                        提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
+                    </div>
+                </div>
+                <div class="col-md-6 banner-bg d-none d-md-block"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row block">
+            <div class="col-md-6 image-block image-block-right">
+                <img src="/images/Uploads/Blockchain-development-image.png"
+                    srcset="/images/Uploads/Blockchain-development-image@2x.png 2x"
+                    alt="Custom blockchain development" />
+            </div>
+            <div class="col-md-6 image-block-right text-left">
+                <h2>区块链开发</h2>
+                <div class="text">
+                    我们拥有专业的区块链技术团队来提供技术服务。
+                    <br><br>
+                    基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发。
+                </div>
+                <a href="#contact" class="link">联系我们</a>
+            </div>
+        </div>
+        <div class="row block">
+            <div class="col-md-6 image-block-right text-right">
+                <h2>基于区块链的行业解决方案</h2>
+                <div class="text" style="text-align: left;">
+                    <br>为金融、科技、娱乐等其它行业提供定制化的基于区块链的解决方案。
+                    <br><br>以专业的知识和技能以及在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
+                </div>
+                <a href="#contact" class="link">联系我们</a>
+            </div>
+            <div class="col-md-6 image-block">
+                <img src="/images/Uploads/Solutions-image-x.png" srcset="/images/Uploads/Solutions-image-@2x.png 2x"
+                    alt="Blockchain solutions" />
+            </div>
+        </div>
+        <div class="row block">
+            <div class="col-md-6 image-block image-block-right">
+                <img src="/images/Uploads/Services-image-x.png" srcset="/images/Uploads/Services-image-@2x.png 2x"
+                    alt="Blockchain services" />
+            </div>
+            <div class="col-md-6 image-block-right text-left">
+                <h2>区块链周边产品研发</h2>
+                <div class="text">我们不仅提供区块链系统的定制开发，还提供包括Dapp(去中心化应用程序)、智能合约、区块浏览器、交易所通证对接、钱包等区块链周边产品的研发服务。
+                </div>
+                <a href="#contact" class="link">更多</a>
+            </div>
+        </div>
+        <div class="row block">
+            <div>
+                <div class="container">
+                    <h2>我们的研发部门</h2>
+                    <div>
+                        <div class="h4">
+                            团队内拥有多名区块链技术的专家，他们负责分析项目实施所面临的各种挑战和业务方面等问题，并提供最有效的解决方案。
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="manufacturer-scheme research-manufacturer-scheme">
+                <div class="container">
+                    <div class="manufacturer-scheme-content">
+                        <img class="manufacturer-dots" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
+                        <img class="manufacturer-image manufacturer-image-1170"
+                            src="/images/Services/Research/scheme1170.svg"
+                            alt="research and development department">
+                        <img class="manufacturer-image manufacturer-image-1024"
+                            src="/images/Services/Research/scheme1024.svg"
+                            alt="research and development department">
+                        <div class="manufacturer-points research-manufacturer-points">
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle01">
+                                    <span class="manufacturer-point-title">需求分析</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>考察、分析、记录项目需求。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle02">
+                                    <span class="manufacturer-point-title">分析市场契合度和竞争者</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>对项目进行评估，确定市场或公司内部的需求程度。同时和同行业企业进行比较分析，找出该项目相对于竞争对手的优缺点。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle03">
+                                    <span class="manufacturer-point-title">准备用例</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>创建项目、行业或竞争对手的用例：创建不同的角色并确定其功能、条件、描述活动和交互，并转移到项目的需求当中。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle04">
+                                    <span class="manufacturer-point-title">实施区块链方案的技术概述</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>由区块链专家评估、审查项目的需求，并做技术选型包括区块链平台、框架、其它工具等。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle05">
+                                    <span class="manufacturer-point-title">项目试点/POC测试</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>对项目进行试点和概念的验证，让大型项目在正式运行之前识别、评估和演示区块链解决方案的成果。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row block">
+            <div class="research-who-is-this">
+                <h2 class="col-md-12 col-sm-4">我们提供的技术和解决方案适用于哪些场景和行业？</h2>
+                <div class="h4 col-md-12 col-sm-4">对于任何行业或任何规模的企业，我们都做好了调查的准备，为您的企业量身打造区块链的项目。</div>
+                <div class="">
+                    <div class="row advisory-icons hyperledger-icons research-development-icons col-md-12 col-sm-4">
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>区块链初创公司</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>中小企业</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>国企或事业单位</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>跨国集团</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>政府机构</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>非营利组织</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row block">
+            <div class="research-expertise">
+                <h2 class="col-md-12 col-sm-12">我们在区块链开发方面的专业知识</h2>
+                <div class="h4 col-lg-12 col-md-12 col-sm-12">
+                    从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>公有链和私有链</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>
+                                <a class="link-black" href="/services/smart-contract">
+                                    智能合约开发
+                                </a>
+                            </h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>Dapps开发</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>去中心化交易所</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3><a class="link-black" href="/services/blockchain-development/">区块链开发</a></h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3><a class="link-black" href="/solutions/">行业解决方案</a></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-6 sphere">
+                    <h2>关于我们</h2>
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon1.svg" alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon2.svg" alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon3.svg" alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon4.svg" alt="" />
+                </div>
+                <div class="col-md-12 col-lg-6" style="margin-top: 10px;">
+                    <p>我们是一家致力于将区块链技术的力量带到更广阔的商业领域中的公司，公司CEO拥有多年的区块链产品研发和市场开拓经验。公司总部位于深圳。</p>
+                    <p>我们拥有专业的软件开发和架构专家，为市场营销人员、业务分析师和技术支持人员提供强大的后盾。</p>
+                    <p>多年以来，我们一直与全国各地的客户合作，利用现有的区块链解决方案，来构建新的去中心化应用程序，为合作伙伴的业务转型助力。</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: #fff; padding-top: 30px;">
+        <% include ./common/solutions.ejs %>
+    </div>
+
+    <!-- Content End -->
+
+    <!-- Common Footer -->
+    <% include ./common/footer.ejs %>
+    <!-- Common Footer End -->
 </body>
+
 </html>
