--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -144,7 +144,7 @@
                     <a itemprop="sameAs" href="#" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
                 </div> -->
-                <div class="copyright">©2019 哲涵区块链科技工作室. 版权所有.</div>
+                <div class="copyright">©2019-2020 哲涵区块链科技工作室. 版权所有.</div>
             </div>
         </div>
     </div>
