--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,7 @@
     <link rel='stylesheet' href='/packages/bootstrap/css/bootstrap.css' media='all' />
     <link rel='stylesheet' href='/packages/slick/slick.css' media='all' />
     <link rel='stylesheet' href='/packages/slick/slick-theme.css' media='all' />
-    <link rel='stylesheet' href='/packages/light-box/css/lightbox.min.js'
-        media='all' />
+    <link rel='stylesheet' href='/packages/light-box/css/lightbox.min.js' media='all' />
     <link rel='stylesheet' href='/css/style.css' media='all' />
     <link rel='stylesheet' href='/css/screen.css' media='all' />
     <link href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.css" rel="stylesheet">
@@ -38,11 +37,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>用区块链技术改进<br>各行业现有的业务</h1>
+                    <h1>区块链链改服务</h1>
                     <div class="h2-banner h2-border color-white">
-                        提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助企业简化流程、提高效率，确保制度的公平和公正。</div>
-                    <div class="banner-text">
-                        提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
+                        将区块链技术服务于社会是我们的宗旨；<br>
+                        用区块链提高生产力，<br>
+                        让社会更加公平，<br>
+                        让企业更加高效是我们的使命。<br><br>
+                        <div class="banner-text">
+                            我们提供各个行业基于区块链的链改解决方案，
+                            将多个不信任的实体链接，
+                            提高效率、互相信任、数据拉通、业务智能化流转。
+                            <br />
+                            <br />
+                            提供区块链技术开发服务和定制化底层区块链系统的研发，帮助您的企业从传统技术到区块链技术的过渡，为您的业务转型提供技术支持。
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -109,11 +117,9 @@
                     <div class="manufacturer-scheme-content">
                         <img class="manufacturer-dots" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
                         <img class="manufacturer-image manufacturer-image-1170"
-                            src="/images/Services/Research/scheme1170.svg"
-                            alt="research and development department">
+                            src="/images/Services/Research/scheme1170.svg" alt="research and development department">
                         <img class="manufacturer-image manufacturer-image-1024"
-                            src="/images/Services/Research/scheme1024.svg"
-                            alt="research and development department">
+                            src="/images/Services/Research/scheme1024.svg" alt="research and development department">
                         <div class="manufacturer-points research-manufacturer-points">
                             <div class="manufacturer-point">
                                 <div class="manufacturer-point-toggle manufacturer-point-toggle01">
