--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <h1>区块链开发服务</h1>
-                    <div class="h2-banner h2-border color-white"><br>提供不同行业的区块链定制化开发和解决方案</div>
+                    <div class="h2-banner h2-border color-white"><br>提供针对不同行业的区块链定制化开发和解决方案</div>
                     <a href="#contact" class="link">现在联系</a>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -78,7 +78,7 @@
                 <div>
                     <div class="h4">根据您所在的行业和需求来设计合理的解决方案。</div>
                     <div class="h4">
-                        根据您的业务、需求和规模在Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)中选择出最适合您的区块链平台，这些平台都是全球领先的，且都是经过市场多年推敲筛选出来的。
+                        根据您的业务、需求和企业规模在Hyperledger(超级账本)、EOS(柚子)、BitShares(比特股)和Ethereum(以太坊)以及其它区块链平台中选择出最适合您的区块链平台，这些平台都是全球领先的，且都是经过市场多年推敲筛选出来的。
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                         <div class="point point-accordion">
                             <h3>智能合约和智能钱包</h3>
                             <div class="text">
-                                <p>自动执行的合约，通过时间或者事件触发支付功能的钱包。</p>
+                                <p>满足条件自动执行的合约，通过时间或者事件触发自动支付功能的钱包。</p>
                             </div>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                         <div class="point point-accordion">
                             <h3>跨境业务的付款和转账</h3>
                             <div class="text">
-                                <p>简单、快速、低成本地跨货币和跨国界的付款和收款功能。</p>
+                                <p>简单、快速、低成本地跨币种和跨国界的付款和收款。</p>
                             </div>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                         <div class="point point-accordion">
                             <h3>网络攻击预防</h3>
                             <div class="text">
-                                <p>去中心化的区块链使传统的攻击毫无用处，同时也防止了蜜罐攻击。</p>
+                                <p>去中心化的区块链使传统的攻击束手无策，同时也防止了蜜罐攻击。</p>
                             </div>
                         </div>
                     </div>
@@ -225,8 +225,9 @@
                                     <h2 class="h1 color-h2 m-0 p-0">服务流程</h2>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>要想成功的定制区块链项目并不是一件简单的事情，它需要专业的技能和严格的项目管理。我们使用了精心设计的区块链开发流程结合敏捷开发，让您的项目完全地按照您的需求去实现。</p>
-                                    <p>我们的团队内部包括区块链产品经理、区块链需求分析人员、区块架构师、区块链开发人员、质量保证专家和其它各行业专家，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
+                                    <p>要想成功的定制区块链项目并不是一件简单的事情，它需要专业的技能和严格的流程。我们使用精心设计的区块链开发流程结合敏捷开发，让您的项目完全地按照您的需求去实现。
+                                    </p>
+                                    <p>我们的团队内部包括区块链产品经理、区块链需求分析人员、区块架构师、区块链开发人员、区块链测试专家，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
                                     </p>
                                 </div>
                             </div>
