--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>石墨烯和比特股开发</h1>
-                    <div class="h2-banner">石墨烯区块链的功能齐全且速度极快</div>
+                    <div class="h2-banner">石墨烯区块链的特点是功能强大且速度非常快</div>
                     <div class="text">
                         <div>
                             <div>
@@ -73,7 +73,7 @@
                             <div class="point point-accordion">
                                 <h3>用途广泛</h3>
                                 <div class="text">
-                                    <p>石墨烯是开源的，它提供了一系列多功能的模块，因此可以实现从金融到航天等跨行业、领域的商业场景。</p>
+                                    <p>石墨烯是开源的，它提供了一系列多功能的模块，因此可以实现从金融到航天等跨行业、领域的应用场景。</p>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                 <h3>良好的口碑</h3>
                                 <div class="text">
                                     <p>
-                                        石墨烯自2014年起开始投入使用到目前为止已经拥有了很多知名的应用，如BitShares，Steemit去中心化的社交发布门户以及EOS智能合约的生态系统等都是基于石墨烯的。
+                                        石墨烯自2014年起开始投入使用到目前为止已经拥有了很多知名的应用，如BitShares，Steemit去中心化的社交发布门户以及EOS智能合约的生态系统等都是基于石墨烯开发的。
                                     </p>
                                 </div>
                             </div>
@@ -175,7 +175,7 @@
             <div class="industry-is-covered-content">
                 <h2>改进各个行业</h2>
                 <div class="h4 gor-100">
-                    从不同的场景调整BitShares，来满足特定的企业需求。可以说任何行业都可以从BitShares中得到好处，这是一些已经投入使用的案例：
+                    从不同的场景调整BitShares，来满足特定的链改需求。可以说BitShares可以应用在任何行业和不同领域，这是一些已经投入使用的案例：
                 </div>
                 <div class="industry-is-covered-list">
                     <div class="row">
