--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 col-sm-12">
-                    <h1>基于区块链的<br>医疗保健解决方案</h1>
+                    <h1>医疗健康<br>链改解决方案</h1>
                     <div class="h2-banner h2-banner-indents">
                         提高医疗服务的质量和效率。<br><br>使用区块链来保护隐私，更轻松，更有效的<br>数据交换以及安全的患者对自己数据的控制。
                     </div>
@@ -62,7 +62,8 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample top-health-img01"></div>
-                            <p><a class="teal-link" href="http://www.sohu.com/a/240542099_114835" style="white-space: initial;" target="_blank"
+                            <p><a class="teal-link" href="http://www.sohu.com/a/240542099_114835"
+                                    style="white-space: initial;" target="_blank"
                                     rel="noopener">IBM：连续第8年，医疗保健组织的数据泄露成本最高，每个丢失或被盗记录的成本为408美元</a>
                             </p>
                         </div>
@@ -72,8 +73,8 @@
                             <div class="iot-gathers-massive-img img-row-sample top-health-img02"></div>
                             <p><a class="teal-link"
                                     href="http://news.sina.com.cn/c/nd/2016-09-20/doc-ifxvyqvy6824874.shtml"
-                                    style="white-space: initial;"
-                                    target="_blank" rel="noopener">新浪新闻：2016年，在中国有80％新药临床数据涉假</a>
+                                    style="white-space: initial;" target="_blank"
+                                    rel="noopener">新浪新闻：2016年，在中国有80％新药临床数据涉假</a>
                             </p>
                         </div>
                     </div>
@@ -82,8 +83,8 @@
                             <div class="iot-gathers-massive-img img-row-sample top-health-img03"></div>
                             <p><a class="teal-link"
                                     href="https://www.cn-healthcare.com/article/20170822/content-495062.html"
-                                    style="white-space: initial;"
-                                    target="_blank" rel="noopener">健康界：患者数据匹配错误率达50％，医疗健康数据无缝对接</a></p>
+                                    style="white-space: initial;" target="_blank"
+                                    rel="noopener">健康界：患者数据匹配错误率达50％，医疗健康数据无缝对接</a></p>
                         </div>
                     </div>
                 </div>
@@ -153,7 +154,8 @@
         <div class="two-row-text">
 
             <div class="container">
-                    <img class="manufacturer-dots" style="margin: 20px 0;" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
+                <img class="manufacturer-dots" style="margin: 20px 0;" src="/images/Solutions/Logistics/dots.svg"
+                    alt="Dots">
 
                 <div class="gor-100">
                     <div class="row">
