--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 col-sm-12">
-                    <h1>基于区块链的<br>物联网解决方案</h1>
+                    <h1>物联网<br>链改解决方案</h1>
                     <div class="h2-banner h2-banner-indents">
                         通过高效的事务处理和完整的流程跟踪，
                         <br>
