--- a/views/solutions/logistics.ejs
+++ b/views/solutions/logistics.ejs
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 col-sm-12">
-                    <h1>基于区块链的<br>物流运输解决方案</h1>
+                    <h1>物流运输<br>链改解决方案</h1>
                     <div class="h2-banner h2-banner-indents">使用区块链改进物流行业的流程管理，<br>以此来获得市场竞争的优势并降低成本。</div>
                     <a href="#contact" class="link">免费获取报价</a>
                     <div class="bg"></div>
