--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -57,14 +57,14 @@
                                         <a title="Blockchain development" href="/services/blockchain-development"
                                             itemprop="url" class="dropdown-item depth-1">区块链开发<span></span></a>
                                         <ul class="sub-menu">
+                                            <li id="menu-item-1219" itemprop="name"
+                                                class="menu-item menu-item-type-post_type menu-item-object-services menu-item-1219">
+                                                <a href="/services/hyperledger">超级账本<span></span></a>
+                                            </li>
                                             <li id="menu-item-1220" itemprop="name"
                                                 class="menu-item menu-item-type-post_type menu-item-object-services menu-item-1220">
                                                 <a
                                                     href="/services/graphene-bitshares">石墨烯和比特股<span></span></a>
-                                            </li>
-                                            <li id="menu-item-1219" itemprop="name"
-                                                class="menu-item menu-item-type-post_type menu-item-object-services menu-item-1219">
-                                                <a href="/services/hyperledger">超级账本<span></span></a>
                                             </li>
                                             <li id="menu-item-1909" itemprop="name"
                                                 class="menu-item menu-item-type-post_type menu-item-object-services menu-item-1909">
@@ -109,12 +109,12 @@
                                     <li id="menu-item-1620" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1620">
                                         <a title="Healthcare" href="/solutions/healthcare" itemprop="url"
-                                            class="dropdown-item depth-1">医疗保健<span></span></a>
+                                            class="dropdown-item depth-1">医疗健康<span></span></a>
                                     </li>
-                                    <!-- <li id="menu-item-1795" itemprop="name"
+                                    <li id="menu-item-1795" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1795">
                                         <a title="Real Estate" href="/solutions/real-estate" itemprop="url"
-                                            class="dropdown-item depth-1">不动产<span></span></a></li>
+                                            class="dropdown-item depth-1">房地产<span></span></a></li>
                                     <li id="menu-item-2070" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2070">
                                         <a title="Insurance" href="/solutions/insurance" itemprop="url"
@@ -147,7 +147,7 @@
                                     <li id="menu-item-3961" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3961">
                                         <a title="Legal" href="/solutions/legal" itemprop="url"
-                                            class="dropdown-item depth-1">法律<span></span></a></li> -->
+                                            class="dropdown-item depth-1">法律<span></span></a></li>
                                 </ul>
                             </li>
                             <!-- <li id="menu-item-2696" itemprop="name"
