--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>超级账本开发服务</h1>
-                    <div class="h2-banner h2-banner-indents">搭建一个企业生态系统，通过超级账本保证该生态系统内的业务透明、不可篡改、可审计、可被监督。</div>
+                    <div class="h2-banner h2-banner-indents">搭建一个完整的区块链生态系统，<br>通过超级账本保证该生态系统内的业务透明、不可篡改、可审计、可被监督。</div>
                     <a href="#contact" class="link">现在联系</a>
                     <div class="bg"></div>
                 </div>
